@@ -1,50 +1,0 @@
-// Voronoi calculation example code
-//
-// Author   : Chris H. Rycroft (LBL / UC Berkeley)
-// Email    : chr@alum.mit.edu
-// Date     : May 18th 2011
-
-#include "voro++.cc"
-
-// Set up constants for the container geometry
-const double x_min=-1,x_max=1;
-const double y_min=-1,y_max=1;
-const double z_min=-1,z_max=1;
-const double cvol=(x_max-x_min)*(y_max-y_min)*(x_max-x_min);
-
-// Set up the number of blocks that the container is divided into
-const int n_x=6,n_y=6,n_z=6;
-
-// Set the number of particles that are going to be randomly introduced
-const int particles=20;
-
-// This function returns a random double between 0 and 1
-double rnd() {return double(rand())/RAND_MAX;}
-
-int main() {
-	int i;
-	double x,y,z;
-
-	// Create a container with the geometry given above, and make it
-	// non-periodic in each of the three coordinates. Allocate space for
-	// eight particles within each computational block
-	container con(x_min,x_max,y_min,y_max,z_min,z_max,n_x,n_y,n_z,
-			false,false,false,8);
-
-	// Randomly add particles into the container
-	for(i=0;i<particles;i++) {
-		x=x_min+rnd()*(x_max-x_min);
-		y=y_min+rnd()*(y_max-y_min);
-		z=z_min+rnd()*(z_max-z_min);
-		con.put(i,x,y,z);
-	}
-
-	double rx,ry,rz;z=0;
-	for(y=y_min;y<=y_max;y+=0.05) for(x=x_min;x<=x_max;x+=0.05) {
-		i=con.find_nearest(x,y,z,rx,ry,rz);
-		printf("%d %g %g %g %g %g %g\n",i,x,y,z,rx,ry,rz);
-	}
-
-	con.draw_particles("nearest.gnu");
-	con.draw_cells_gnuplot("nearest_c.gnu");
-}
